<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity" >

    <cn.duocool.lashou.mywidget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        title="注  册" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/titleBar" >

        <LinearLayout
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/background_corners"
            android:orientation="vertical"
            android:padding="15dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/headPhoto" />

                <ImageView
                    android:id="@+id/imgv_head"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/umeng_socialize_default_avatar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/edit_paddingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/reg_hint_email"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nickName" />

                <EditText
                    style="@style/edit_paddingStyle"
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:hint="@string/reg_hint_notnull"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/phoneNumber" />

                <EditText
                    style="@style/edit_paddingStyle"
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:inputType="phone"
  					android:hint="@string/reg_hint_email"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/password" />

                <EditText
                    style="@style/edit_paddingStyle"
                    android:id="@+id/et_pwd"
                    android:inputType="textPassword"
                    android:hint="@string/reg_hint_notnull"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_showPwd"
                android:text="@string/showPwd" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_button_selector"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:onClick="onClick"
                android:text="@string/regeist"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>